--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,7 +6,7 @@ body {
   max-width: 1280px;
 }
 
-body, p, a, div, th, td { 
+body, p, a, div, th, td {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -89,6 +89,14 @@ article h3 {
   margin: 0 0 10px 0;
 }
 
+article h4 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0 0 8px 0;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -118,6 +126,11 @@ td {
 
 .label-optional {
   float: right;
+}
+
+.open-left {
+  right: 0;
+  left: auto;
 }
 
 /* ------------------------------------------------------------------------------------------
@@ -460,13 +473,20 @@ tr.del td {
 }
 
 @keyframes bouncedelay {
-  0%, 80%, 100% { 
+  0%, 80%, 100% {
     transform: scale(0.0);
     -webkit-transform: scale(0.0);
-  } 40% { 
+  } 40% {
     transform: scale(1.0);
     -webkit-transform: scale(1.0);
   }
+}
+
+/* ------------------------------------------------------------------------------------------
+ * Tabs
+ * ------------------------------------------------------------------------------------------ */
+ul.nav-tabs {
+  margin: 0;
 }
 
 /* ------------------------------------------------------------------------------------------
